@@ -15,6 +15,8 @@ Bug fixes:
 - #1050 the theme optimizer proposed the deletion of styles used by theme pages
 - Fixed PortalThemesTool.renderAccessKeys so that it produces XHTML 1.0 Strict
   valid output.
+- Added support for rendering accesskeys defined in an external CPS vocabulary.
+  This fixes #983.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
